# pva_tracker

./: .gitignore  CMakeLists.txt  README.en.md  README.md  Untitled Document  mpc_record_test.csv  package.xml  仿真使用说明  远程动态调参说明
cfg/: hsh_new_300  hsh_new_300.yaml  hsh_new_300_2.yaml  hsh_new_300_good.yaml  hsh_new_300_good_2.yaml  hsh_new_300_good_3.yaml  pengpeng.yaml  pengpeng2.yaml  pengpeng3.yaml  pid.cfg  pid_ground.cfg
include/plan_zuan_quan/: plan_zuan_quan.h
launch/: fake_random_fly.launch  hover.launch  hover_test_on_up.launch  hua_yuan.launch  mpc_tracker.launch  mpc_tracker_pytorch.launch  path_planning_sitl.launch  random_fly.launch  square_fly.launch  square_fly_test_on_real_drone.launch  test_take_off.launch  test_take_off_on_up.launch
msg/: input.msg
script/: blue_1.yaml  blue_2.yaml  blue_3.yaml  blue_4.yaml  blue_hover1.yaml  blue_square1.yaml  blue_tmp.yaml  ground_reconfigure.py  hsh_300.yaml  hsh_300_1.yaml  hsh_300_2.yaml  hsh_rolling_head.yaml  hsh_rolling_head_with_435.yaml  onboard_configure.py  pp_fake_random_fly  reconfigure_ground_start.sh
scripts/: 3D_realtime_scatter.py  gf_plot.py  plot_data.py  tracker_nn.py
src/: build_dataset.cpp  control_test.cpp  fake_random_fly.cpp  hover.cpp  hover_test_on_up.cpp  mpc_record.cpp  mpc_tracker.cpp  mpc_tracker_pytorch.cpp  mpc_tracker_pytorch_lss.cpp  mpc_tracker_pytorch_up.cpp  plan_zuan_quan.cpp  plot_pva.cpp  pub_zuan_quan.cpp  random_fly.cpp  record_plot_data.cpp  sim_control_test.cpp  square_fly.cpp  square_fly_test_on_real_drone.cpp  test_take_off.cpp  test_take_off_on_up.cpp  tiny_dnn_test1.cpp  tiny_dnn_test2.cpp  tracker.cpp  up_control_test.cpp
